boinc (7.6.28+dfsg-1) unstable; urgency=medium

  * Upload to unstable.
  * New upstream release, patch refresh.
  [ Preston Maness ]
  * Fix missing stdout/stderr logs with systemd service file.
    Closes: #815214

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 23 Feb 2016 17:28:44 +0100

boinc (7.6.25+dfsg-2exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 17 Feb 2016 19:03:56 +0100

boinc (7.6.25+dfsg-2) unstable; urgency=medium

  * Upload to unstable.
  * Add support for cuda 7.5 (amd64 only). Closes: #814659
    - thanks Andreas Beckmann for the useful bug report!

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 17 Feb 2016 19:01:48 +0100

boinc (7.6.25+dfsg-1exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 11 Feb 2016 12:42:39 +0100

boinc (7.6.25+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Upload to unstable
  * Remove sleep 1 in service file, useless because it doesn't
    fix the missing GPU detect (LP: #1544300)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 11 Feb 2016 12:38:59 +0100

boinc (7.6.23+dfsg-1exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 08 Feb 2016 20:20:32 +0100

boinc (7.6.23+dfsg-1) unstable; urgency=medium

  * Upload to unstable
  * New upstream release (Closes: #811947)
  * Drop all patches from Preston: upstream.
  * Patch refresh.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 08 Feb 2016 20:00:48 +0100

boinc (7.6.22+dfsg-3exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 29 Jan 2016 18:37:05 +0100
