@@ -2,6 +2,8 @@ boinc (7.6.28+dfsg-1) unstable; urgency=medium
 
   * Upload to unstable.
   * New upstream release, patch refresh.
+  * Bump std-version to 3.9.7, and watch file to 4.
+  * Fix unsecure VCS-* fields.
   [ Preston Maness ]
   * Fix missing stdout/stderr logs with systemd service file.
     Closes: #815214
